# GOTURN

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
cmake/Modules/: FindCaffe.cmake
nets/: solver.prototxt  tracker-both.prototxt  tracker.prototxt
scripts/: download_alov.sh  download_vot2014.sh  save_videos_test.sh  train.sh
src/helper/: bounding_box.cpp  bounding_box.h  cyclic_encodable.cpp  cyclic_encodable.h  cyclic_encodable_test.cpp  image_proc.cpp
src/loader/: loader_imagenet_det.cpp  video_loader.cpp
src/native/: vot.cpp
src/network/: regressor.cpp  regressor_train.cpp
src/tracker/: tracker.cpp  tracker_manager.cpp
src/train/: example_generator.cpp  example_generator.h  pretrain.cpp  tracker_trainer.cpp  train.cpp
